# organizador

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Encontrado  configurar_ambiente.php  diagnostico.ps1  motor_loop.bat  setup_ambiente.bat  start.bat  test.bat
.github/workflows/: opencode.yml
deploy/: README.md  empacotar.ps1
deploy/producao/: start.bat
docs/bmad/: README.md
docs/bmad/1_negocios/: README.md  visao_negocios.md
docs/bmad/2_gerenciamento/: README.md  plano_projeto.md  status_fluxo.md  tarefas.md
docs/bmad/3_arquitetura/: README.md  design_arquitetura.md  fluxo_dados.md
docs/bmad/4_desenvolvimento/: README.md  auditoria_forense_plano.md  auditoria_forense_tarefas.md  auditoria_forense_walkthrough.md  especificacao_desenvolvimento.md  guia_implantacao.md
docs/bmad/historico/: Roteiro complementar.md  gemini-code-1780835047225.py  trilha_dev_organizador.md
docs/brain_artifacts/: implementation_plan.md  task.md  walkthrough.md
interface_laravel/: .env.producao  composer.json  phpstan.neon  server.php
interface_laravel/app/Models/: ArquivoProcessamento.php  Dispositivo.php
interface_laravel/config/: database.php
interface_laravel/database/migrations/: 2026_06_07_000001_create_dispositivos_table.php  2026_06_07_000002_create_arquivos_processamento_table.php  (+1 more)
interface_laravel/routes/: web.php
motor_python/: extractors.py  extrator_worker.py  find_python.php  ia_service.py  inference_worker.py  inventario.py  main.py  movement_worker.py  pyproject.toml  run_linter_tests.py  run_tests.bat  test_runner.ps1
motor_python/tests/: query_db.py  stress_test.py  test_extracao.py  test_inferencia.py  test_inventario.py  test_movimentacao.py
(+37 files in other folders)
